Revert "MDL-31345 theme_afterburner fixes pagelayout-report overflow"
This reverts commit 018f49465cd97d794c199deea15ea007858ef9b5.

--- a/theme/afterburner/style/rtl.css
+++ b/theme/afterburner/style/rtl.css
@@ -1,15 +1,7 @@
-/*
-OVERRIDE FOR RTL LAYOUT
--------------------------*/
+/** Overide for RTL layout **/
 .dir-rtl .block .header .block_action {
     float:left;
 }
 .dir-rtl .block .header .commands {
     text-align: right;
-}
-/*
-PAGELAYOUT-REPORT
--------------------------*/
-.dir-rtl .pagelayout-report #page-content #region-main-box #region-post-box #region-main-wrap #region-main-pad #region-main .region-content .no-overflow {
-    overflow: auto;
 }
